welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: Invalid literal number
		for (k <- 1to h}
                          ^ColumnByColumn:6: error: ')' expected but '}' found.
		for (k <- 1to h}
                               ^ColumnByColumn:13: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:16: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:19: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:22: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:25: error: Unmatched closing brace '}' ignored here
}
^